# psycache

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml  tox.ini  zensical.toml
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pypi-package.yml
docs/: api-types.md  api.md  async.md  cleanup.md  getting-started.md  index.md  pool-adapters.md  quality-of-life.md  raw-queries.md
docs/instrumentation/: custom.md  index.md  prometheus.md  sentry.md
src/psycache/: __init__.py  __main__.py  _async.py  _durations.py  _sql.py  _sync.py  _tables.py  psycopg_pool.py  sqlalchemy.py  typing.py
src/psycache/instrumentation/: __init__.py  _spans.py  prometheus.py  sentry.py
tests/: __init__.py  test_cli.py  test_maintenance.py  test_psycopg_pool.py  test_raw.py  test_raw_async.py  test_sqlalchemy.py
tests/typing/: core.py  psycopg_pool.py  sqlalchemy.py
